# FDRI-Autopsy

./: .gitignore  CMakeLists.txt  FDRI.py  README.md  main.cpp  notice.txt
FDRI/: .gitignore  CMakeLists.txt  FDRI.cpp  README
FDRI/include/FDRI/: DFXML_creator.hpp  image_handling.hpp
FDRI/src/: DFXML_creator.cpp  helper_functions.cpp  helper_functions.hpp  image_handling.cpp
testing_data/: sample_config.json
